Fixed bug with incorrect provision uuid
